# sigmavault-nas-os

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEBIAN13_VERIFICATION.md  DESKTOP_UI_LAUNCH_GUIDE.md  INTEGRATION_TEST_REPORT.md  Makefile  NEXT_STEPS_MASTER_ACTION_PLAN_v4.md  NEXT_STEPS_MASTER_ACTION_PLAN_v5.md  OPTION_B_STATUS.md  PHASE_2.2_INTEGRATION_COMPLETE.md  PHASE_2.2_SESSION_COMPLETION_SUMMARY.md  PHASE_2.2_THREE_SERVICE_INTEGRATION_STATUS.md  PHASE_2.7.4_FINAL_VALIDATION_REPORT.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_FINAL_STATUS.md  PHASE_3b_1_STATUS_REAL_SITUATION.md  QUICK_REFERENCE.md  README.md  README_PHASE_3b_1_ACTION.md  SETUP_MSYS2_GTK4.bat  SETUP_MSYS2_GTK4.sh  START_HERE.md  VM_TEST_RESULTS.md  deploy.sh  docker-compose.yml  engine_log.txt  go.mod  sigmavault-nas-os.code-workspace  start-services.sh  test-agent-api-endpoints.ps1  test-agent-final.ps1  test-agent-rpc-methods.ps1  test-compression-stats-v2.ps1  (+5 more)
.githooks/: pre-push  pre-push.ps1
.github/: copilot-instructions.md
.github/agents/: AEGIS.agent.md  APEX.agent.md  ARBITER.agent.md  ARCHITECT.agent.md  ATLAS.agent.md  AXIOM.agent.md  BRIDGE.agent.md  CANVAS.agent.md  CIPHER.agent.md  COMMUNICATOR.agent.md  CORE.agent.md  CRYPTO.agent.md  ECLIPSE.agent.md  FLUX.agent.md  FORGE.agent.md  FORTRESS.agent.md  GENESIS.agent.md  HELIX.agent.md  LATTICE.agent.md  LEDGER.agent.md  LINGUA.agent.md  MENTOR.agent.md  MORPH.agent.md  NEURAL.agent.md  NEXUS.agent.md  OMNISCIENT.agent.md  ORACLE.agent.md  ORBIT.agent.md  PHANTOM.agent.md  PHOTON.agent.md  (+11 more)
configs/: development.env  production.env.example
debian/: .gitignore  README.md  changelog  control  rules  sigmavault-desktop.sh
docker/: Dockerfile.api  Dockerfile.builder  Dockerfile.engined
docs/: BUILD_ARTIFACTS.md  CROSS_DOMAIN_SYNTHESIS_REPORT.md  EXECUTIVE_SUMMARY_AND_MASTER_ACTION_PLAN.md  FOUNDATION_FIX_DAY1_STATUS.md  GRPC_INTEGRATION_TEST_REPORT.md  INSTALLATION.md  PHASE-2-INTEGRATION.md  PHASE_2.2_QUICK_START.md  PHASE_2.2_SPRINT_PLAN.md  PHASE_2.3_FEATURE_1_COMPRESSION_STATS_COMPLETE.md  PHASE_2.3_FEATURE_2_AGENT_MANAGEMENT_PLAN.md  PHASE_2.3_SESSION_SUMMARY.md  PHASE_2.3_TESTING_STRATEGY.md  PHASE_2.7.4_EXECUTION_SUMMARY.md  PHASE_2.7.4_SUMMARY.md  PHASE_2.7.5.3_CIRCUIT_BREAKER_TEST_REPORT.md  PHASE_2.7.5_CIRCUIT_BREAKER_TEST_FINDINGS.md  PHASE_2.7.5_PLAN.md  PHASE_2.7.5_PROGRESS.md  PHASE_2.7.5_ROOT_CAUSE_ANALYSIS.md  PHASE_2.7.5_STATUS.md  PHASE_2.7.5_WEBSOCKET_FIX_COMPLETE.md  PHASE_2.8_DAY3_COMPLETION_REPORT.md  PHASE_2.8_DAY3_STATUS.md  PHASE_2.8_DAY4_PORT_MIGRATION_COMPLETE.md  PHASE_2.8_OPTION_B_COMPLETION.md  PHASE_2.8_OPTION_C_PHASE1_VERIFICATION_REPORT.md  PHASE_2.8_OPTION_C_PHASE2_HANDLER_INTEGRATION_REPORT.md  PHASE_2.8_PROGRESS_REPORT.md  PHASE_2_ENGINE_UNIT_TESTS_COMPLETE.md  PHASE_2_UNIT_TESTS_COMPLETE.md  PHASE_3.1_INTEGRATION_TESTING_COMPLETE.md  PHASE_3_ACTION_PLAN.md  PHASE_3_INTEGRATION_TEST_PLAN.md  PHASE_3_STATUS_UPDATE.md  PHASE_3_VERIFICATION_REPORT.md  PHASE_3b.4_COMPLETION_REPORT.md  PHASE_3b_1_CODE_REVIEW.md  PHASE_3b_1_FOUNDATION_REPORT.md  PHASE_3b_1_STATUS_FINAL.md  (+7 more)
flatpak/: .gitignore  README.md  com.sigmavault.desktop.desktop  com.sigmavault.desktop.metainfo.xml  com.sigmavault.desktop.yml  sigmavault-desktop
scripts/: bootstrap.ps1  bootstrap.sh  build-all.sh  build-iso.sh  build-production.sh  create-release.sh  dev-environment-setup.ps1  dev-start.ps1  launch-desktop-msys2.ps1  phase1_verify_imports.py  precache-models.sh  start-full-stack.ps1  test_api_connection.py  test_compression_rpc.py  validate-production.sh
src/desktop-ui/: README.md  __init__.py  check_syntax.py  main.py  meson.build  nautilus-sigmavault.py  pyproject.toml  sigmavault-nativeui.desktop  simple_test.py  test_api_client.py
src/desktop-ui/api/: __init__.py  client.py  dbus_service.py  websocket.py
src/desktop-ui/data/: com.sigmavault.Settings.desktop.in  com.sigmavault.Settings.gschema.xml  sigmavault-settings
src/desktop-ui/resources/: sigmavault.gresource.xml  style.css
src/desktop-ui/sigmavault_desktop/: __init__.py  __main__.py  app.py  window.py
src/desktop-ui/sigmavault_desktop/api/: __init__.py  client.py  models.py
src/desktop-ui/sigmavault_desktop/data/: style.css
src/desktop-ui/sigmavault_desktop/utils/: __init__.py  async_helpers.py  formatting.py
src/desktop-ui/sigmavault_desktop/views/: __init__.py  agents_view.py  dashboard_view.py  job_detail_view.py  jobs_view.py  storage_view.py  system_settings_view.py
src/desktop-ui/sigmavault_desktop/widgets/: __init__.py  job_row.py  stat_card.py
src/desktop-ui/tests/: test_formatting.py
src/desktop-ui/ui/: __init__.py  window.py
src/desktop-ui/ui/pages/: __init__.py  agents.py  compression.py  dashboard.py  network.py  settings.py  shares.py  storage.py
src/desktop-ui/ui/widgets/: __init__.py  agent_card.py  job_row.py  metric_gauge.py  pool_widget.py  status_indicator.py
src/engined/: .gitkeep  README.md  fix_metrics.py  openapi.json  pyproject.toml  requirements-test.txt  run_test.py  setup.cfg  simple_server.py  test_phase3_integration.py  test_rpc_server.py
src/engined/engined/: __init__.py  __main__.py  config.py  main.py
src/engined/engined/agents/: __init__.py  base.py  events.py  memory.py  recovery.py  registry.py  scheduler.py  swarm.py  tier1.py  tier2.py  tuning.py
src/engined/engined/api/: __init__.py  agents.py  compression.py  elite_agents.py  encryption.py  health.py  rpc.py
src/engined/engined/compression/: __init__.py  bridge.py  events.py  job_queue.py
src/engined/engined/core/: __init__.py  circuit_breaker.py  health.py
src/engined/engined/rpc/: __init__.py  server.py  system.proto  system_pb2.py  system_pb2_grpc.py
src/engined/tests/: __init__.py  test_agent_base.py  test_circuit_breaker.py  test_compression.py  test_elite_agents_api.py  test_events.py  test_integration.py  test_memory.py  test_recovery.py  test_rpc_compression.py  test_scheduler.py  test_swarm.py  test_tuning.py
tests/: conftest.py
(+300 files in other folders)
